--- a/TileVania/TileVania.csproj
+++ b/TileVania/TileVania.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Assets\Scripts\LevelExit.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\ScenePersist.cs" />
     <Compile Include="Assets\Scripts\WinScreenScript.cs" />
   </ItemGroup>
   <ItemGroup>
